--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,3 +7,5 @@
 <app-leave-pending></app-leave-pending>
 <br/>
 <app-leavehistory></app-leavehistory>
+
+<input type ="button" value ="New Application" (click)="applyLeave()" >
